# Rainbow

./: CMakeLists.txt
Config/: editor_imgui.ini
Core/: Core.cpp  GUI.cpp  Renderer.cpp  Window.cpp
Demo/CreateWindow/: CreateWindow.cpp
Demo/DrawTriangle/: DrawTriangle.cpp
Demo/DrawTriangle/Shader/: 02VertexShader.hlsl
Editor/: Editor.cpp
Include/Rainbow/: IRender.h
Include/Rainbow/Core/: Core.h
Include/Rainbow/GUI/: GUI.h
Include/Rainbow/Math/: Math.h
Include/Rainbow/Mesh/: SubMesh.h
Include/Rainbow/Renderer/: IRenderer.h
Include/Rainbow/Runtime/: CameraObject.h  Component.h  GameObject.h  Light.h  MeshComponent.h  Model.h  ModelObject.h  Scene.h  SubMesh.h
Include/Rainbow/Window/: Window.h
Runtime/: CameraObject.cpp  GameObject.cpp  LoadGLTF.cpp  LoadGLTF.h  Model.cpp  Runtime.cpp  Scene.cpp
Shader/: SceneMeshShader.h  SceneMeshShader.hlsl  VertexShader.h
